# ultrasearch

./: AGENTS.md  COMPREHENSIVE_PLAN_TO_FIX_ALL_REMAINING_UI_UX_ISSUES_AND_FULLY_LEVERAGE_GPUI.md  Cargo.toml  Justfile  PLAN_TO_BUILD_RUST_WINDOWS_FILE_EXPLORER_TOOL.md  README.md  RUST_BEST_PRACTICES_GUIDE.md  build_installer.ps1  rust-toolchain.toml  update_beads.py
.beads/: beads.base.jsonl  beads.base.meta.json  beads.left.jsonl  beads.left.meta.json  issues.jsonl
.github/workflows/: ci.yml  release.yml
ultrasearch/: Cargo.toml  IMPLEMENTATION_STATUS.md  PROGRESS_REPORT.md
ultrasearch/crates/cli/: Cargo.toml
ultrasearch/crates/cli/src/: main.rs
ultrasearch/crates/content-extractor/: Cargo.toml  build.rs
ultrasearch/crates/content-extractor/src/: component_manager.rs  lib.rs  ocr.rs
ultrasearch/crates/content-extractor/src/ifilter/: mod.rs
ultrasearch/crates/content-extractor/src/plugins/: registry.rs
ultrasearch/crates/content-index/src/: lib.rs
ultrasearch/crates/content-index/src/tiers/: mod.rs
ultrasearch/crates/core-serialization/: Cargo.toml
ultrasearch/crates/core-serialization/src/: lib.rs  mmap.rs
ultrasearch/crates/core-types/: Cargo.toml
ultrasearch/crates/core-types/src/: lib.rs
ultrasearch/crates/core-types/src/config/: mod.rs
ultrasearch/crates/index-worker/: Cargo.toml
ultrasearch/crates/index-worker/src/: main.rs
ultrasearch/crates/ipc/: Cargo.toml
ultrasearch/crates/ipc/src/: framing.rs  lib.rs
ultrasearch/crates/ipc/src/client/: named_pipe_client.rs
ultrasearch/crates/launcher/: Cargo.toml
ultrasearch/crates/launcher/src/: main.rs
ultrasearch/crates/meta-index/: Cargo.toml
ultrasearch/crates/meta-index/src/: cache.rs  fst.rs  lib.rs  state.rs  tiers.rs
ultrasearch/crates/ntfs-watcher/: Cargo.toml
ultrasearch/crates/ntfs-watcher/src/: lib.rs
ultrasearch/crates/scheduler/src/: lib.rs
ultrasearch/crates/scheduler/src/idle/: mod.rs
ultrasearch/crates/scheduler/src/metrics/: collect.rs  mod.rs
ultrasearch/crates/semantic-index/: Cargo.toml
ultrasearch/crates/service/: Cargo.toml
ultrasearch/crates/service/src/: bootstrap.rs  ipc.rs  lib.rs  logging.rs  main.rs  meta_ingest.rs  metrics.rs  planner.rs  priority.rs  scanner.rs  scheduler_runtime.rs  search_handler.rs  status.rs  status_provider.rs
ultrasearch/crates/service/src/dispatcher/: job_dispatch.rs
ultrasearch/crates/service/src/windows/: management.rs  mod.rs  service_main.rs
ultrasearch/crates/ui/: Cargo.toml
ultrasearch/crates/ui/src/: actions.rs  background.rs  globals.rs  icon_cache.rs  lib.rs  main.rs  theme.rs
ultrasearch/crates/ui/src/ipc/: client.rs
ultrasearch/crates/ui/src/model/: state.rs
ultrasearch/crates/ui/src/views/: context_menu.rs  help_panel.rs  mod.rs  onboarding.rs  preview_view.rs  quick_search.rs  results_table.rs  search_view.rs  status_view.rs
ultrasearch/docs/: FEATURES.md  GRAALVM_SETUP.md
ultrasearch/wix/: main.wxs
