[workspace]
resolver = "2"
members = [
    "ultrasearch/crates/*",
]

[workspace.package]
edition = "2021" # temporary until edition2024 is stable in toolchain; policy is nightly but avoid build breaks
rust-version = "1.84"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Ultrasearch Team"]
repository = "https://github.com/Dicklesworthstone/ultrasearch"
homepage = "https://github.com/Dicklesworthstone/ultrasearch"

[workspace.dependencies]
# Keep deps centralized; values are wildcards per policy.
anyhow = "*"
thiserror = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde_yaml = "*"
toml = "*"
bincode = "1.3.3"
rkyv = { version = "*", features = ["std", "validation"] }
dotenvy = "*"
once_cell = "*"
tokio = { version = "*", features = ["rt-multi-thread", "macros", "net", "fs", "io-util", "time", "signal"] }
rayon = "*"
crossbeam-channel = "*"
parking_lot = "*"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_SystemInformation",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Ioctl",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_UI_WindowsAndMessaging",
] }
sysinfo = { version = "0.30", default-features = true, features = ["disk", "process", "system"] }
tantivy = { version = "*", features = ["mmap", "lz4-compression"] }
fst = "*"
memmap2 = "*"
extractous = { version = "*" }
reqwest = { version = "*", default-features = false, features = ["rustls-tls", "stream"] }
image = { version = "*", default-features = false, features = ["png", "jpeg"] }
uuid = { version = "*", features = ["v4"] }
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter", "fmt"] }
smallvec = "*"
ahash = "*"
indexmap = { version = "*", features = ["serde"] }
lru = "*"
slotmap = "*"
bumpalo = "*"
clap = { version = "*", features = ["derive", "env"] }
console = "*"
indicatif = "*"
gpui = { git = "https://github.com/zed-industries/zed.git", package = "gpui" }
gpui-component = { git = "https://github.com/zed-industries/zed.git", package = "gpui-component" }
proptest = "*"
criterion = { version = "*", default-features = false, features = ["html_reports"] }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "allow"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
too_many_arguments = "allow"
module_name_repetitions = "allow"

[profile.dev]
opt-level = 1
debug = true
incremental = true
overflow-checks = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = false
panic = "abort"
incremental = false

[profile.release-service]
inherits = "release"
opt-level = "z"

[profile.release-worker]
inherits = "release"
opt-level = 3
