[workspace]
resolver = "2"
members = [
    "ultrasearch/crates/*",
]

[workspace.package]
edition = "2024" # nightly policy
rust-version = "1.84"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Ultrasearch Team"]
repository = "https://github.com/Dicklesworthstone/ultrasearch"
homepage = "https://github.com/Dicklesworthstone/ultrasearch"

[workspace.dependencies]
# Keep deps centralized; values are wildcards per policy.

anyhow = "*"
thiserror = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
toml = "*"
bincode = "*"
rkyv = { version = "*", features = ["std", "validation"] }
dotenvy = "*"
once_cell = "*"
tokio = { version = "*", features = ["rt-multi-thread", "macros", "net", "fs", "io-util", "time", "signal", "sync", "process"] }
crossbeam-channel = "*"
bitflags = { version = "*", features = ["serde"] }
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_SystemInformation",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Performance",
    "Win32_System_Ioctl",
    "Win32_System_IO",
    "Win32_System_Performance",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_Storage_IndexServer",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Power",
    "Win32_UI_Shell",
] }
sysinfo = "*"
tantivy = { version = "*", features = ["mmap", "lz4-compression"] }
fst = "*"
memmap2 = "*"
extractous = { version = "*" }
uuid = { version = "*", features = ["v4", "serde"] }
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter", "fmt"] }
ahash = "*"
lru = "*"
slotmap = "*"
lasso = "*"
clap = { version = "*", features = ["derive", "env"] }
console = "*"
indicatif = "*"
gpui = { git = "https://github.com/zed-industries/zed.git", package = "gpui" }
gpui-component = { git = "https://github.com/zed-industries/zed.git", package = "gpui-component" }
futures = "*"
parking_lot = "*"
smallvec = "*"
indexmap = { version = "*", features = ["serde"] }
bumpalo = "*"
rayon = "*"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "allow"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
too_many_arguments = "allow"
module_name_repetitions = "allow"

[profile.dev]
opt-level = 1
debug = true
incremental = true
overflow-checks = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = false
panic = "abort"
incremental = false

[profile.release-service]
inherits = "release"
opt-level = "z"

[profile.release-worker]
inherits = "release"
opt-level = 3
