[workspace]
resolver = "2"
members = [
    "crates/core-types",
    "crates/core-serialization",
    "crates/ntfs-watcher",
    "crates/meta-index",
    "crates/content-index",
    "crates/content-extractor",
    "crates/scheduler",
    "crates/ipc",
    "crates/semantic-index",
    "crates/service",
    "crates/index-worker",
    "crates/ui",
    "crates/cli",
]

[workspace.package]
edition = "2024"
rust-version = "1.84"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Jeffrey Emanuel <jeffrey.emanuel@gmail.com>"]
repository = "https://github.com/Dicklesworthstone/ultrasearch"
homepage = "https://github.com/Dicklesworthstone/ultrasearch"

[workspace.dependencies]
# --- Core ecosystem ---
anyhow = "*"
thiserror = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde_yaml = "*"
toml = "*"
bincode = "*"
rkyv = { version = "*", features = ["std", "validation"] }
dotenvy = "*"
once_cell = "*"

# --- Concurrency & async ---
tokio = { version = "*", features = ["rt-multi-thread", "macros", "net", "fs", "io-util", "time", "signal"] }
rayon = "*"
crossbeam-channel = "*"
parking_lot = "*"

# --- NTFS / Windows / system info ---
windows = { version = "*", features = [
    "Win32_Foundation",
    "Win32_System_SystemInformation",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Ioctl",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_ServiceManagement",
] }
windows-sys = { version = "*", features = [
    "Win32_Foundation",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
    "Win32_System_ServiceManagement",
] }
sysinfo = { version = "*", default-features = false, features = ["system", "process", "disk"] }

# NTFS / USN journal crate placeholder; adjust when vendored.
usn-journal-rs = { git = "https://github.com/example/usn-journal-rs.git", branch = "main" }

# --- Search engine / index ---
tantivy = { version = "*", features = ["mmap", "lz4-compression"] }
fst = "*"
memmap2 = "*"

# --- Content extraction / OCR / HTTP ---
extractous = { git = "https://github.com/extractous/extractous.git", branch = "main" }
reqwest = { version = "*", default-features = false, features = ["rustls-tls", "stream"] }
image = { version = "*", default-features = false, features = ["png", "jpeg"] }

# --- IPC / serialization ---
uuid = { version = "*", features = ["v4"] }

# --- Logging / tracing ---
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter", "fmt"] }

# --- Data structures / utilities ---
smallvec = "*"
ahash = "*"
indexmap = { version = "*", features = ["serde"] }
lru = "*"
slotmap = "*"
bumpalo = "*"

# --- CLI / UX for tools ---
clap = { version = "*", features = ["derive", "env"] }
console = "*"
indicatif = "*"

# --- UI stack (GPUI) ---
gpui = { git = "https://github.com/zed-industries/zed.git", package = "gpui" }
gpui-component = { git = "https://github.com/zed-industries/zed.git", package = "gpui-component" }

# --- Testing / dev ---
proptest = "*"
criterion = { version = "*", default-features = false, features = ["html_reports"] }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "allow"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
too_many_arguments = "allow"
module_name_repetitions = "allow"

[profile.dev]
opt-level = 1
debug = true
incremental = true
overflow-checks = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = false
panic = "abort"
incremental = false

[profile.release-service]
inherits = "release"
opt-level = "z"

[profile.release-worker]
inherits = "release"
opt-level = 3

[patch.crates-io]
# Add crate patches or forks here when vendored.
#
# Workspace is defined at repository root (../Cargo.toml).
# This file is intentionally left without a [workspace]/[package] section to
# avoid nesting; crates live under ultrasearch/crates/* and are members of the
# root workspace.
