[package]
name = "cli"
version = "0.1.0"
edition = "2024"
publish = false
license = "MIT OR Apache-2.0"
description = "Debug / scripting CLI for UltraSearch"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
ipc = { path = "../ipc" }
core-types = { path = "../core-types" }
console = { workspace = true }
indicatif = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
dotenvy = { workspace = true }
toml = { workspace = true }
serde = { workspace = true, features = ["derive"] }
