[package]
name = "content-extractor"
version = "0.1.0"
edition = "2024"
publish = false
license = "MIT OR Apache-2.0"
description = "Content extraction pipeline for UltraSearch"

[features]
# Keep the heavier Extractous backend opt-in; default stack stays lightweight.
default = []
extractous_backend = ["extractous"]

[dependencies]
core-types = { path = "../core-types" }
anyhow = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
extractous = { workspace = true, optional = true }
directories = "6.0.0"
zip = "6.0.0"
sha2 = "0.10.9"
reqwest = { version = "0.12.24", features = ["stream"] }
which = "8.0.0"

[dev-dependencies]
tempfile = "*"
