[package]
name = "index-worker"
version = "0.1.0"
edition = "2024"
publish = false
license = "MIT OR Apache-2.0"
description = "Batch indexing worker for UltraSearch"

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true, features = ["derive"] }
dotenvy = { workspace = true }
core-types = { path = "../core-types" }
content-extractor = { path = "../content-extractor" }
content-index = { path = "../content-index" }
ipc = { path = "../ipc" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tantivy = { workspace = true }
