[package]
name = "meta-index"
version = "0.1.0"
edition = "2024"
publish = false
license = "MIT OR Apache-2.0"
description = "Tantivy-based filename and metadata index for UltraSearch"

[dependencies]
core-types = { path = "../core-types" }
core-serialization = { path = "../core-serialization" }
anyhow = { workspace = true }
tantivy = { workspace = true }
lru = { workspace = true }
ahash = { workspace = true }
slotmap = { workspace = true }
lasso = { workspace = true }
regex = "1.10"
rkyv = { workspace = true }
serde = { workspace = true, features = ["derive"] }
fst = { workspace = true }
memmap2 = { workspace = true }

[dev-dependencies]
tempfile = "3"
fst.workspace = true
memmap2.workspace = true
