[package]
name = "semantic-index"
version = "0.1.0"
edition = "2024"
publish = false
license = "MIT OR Apache-2.0"
description = "Semantic/vector index plumbing for UltraSearch (placeholder)"

[dependencies]
core-types = { path = "../core-types" }
anyhow = { workspace = true }
hnsw_rs = { version = "*", optional = true }
