[package]
name = "service"
version = "0.1.0"
edition = "2024"
publish = false
license = "MIT OR Apache-2.0"
description = "Windows service host for UltraSearch"

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
tokio = { workspace = true }
dotenvy = { workspace = true }
once_cell = { workspace = true }
clap = { workspace = true, features = ["derive"] }
core-types = { path = "../core-types" }
ipc = { path = "../ipc" }
scheduler = { path = "../scheduler" }
meta-index = { path = "../meta-index" }
content-index = { path = "../content-index" }
ntfs-watcher = { path = "../ntfs-watcher" }
prometheus = "0.13"
uuid = { workspace = true }
bincode = { workspace = true }
tantivy = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }
windows-service = { version = "0.6" }
