[package]
name = "ui"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"
description = "GPUI desktop client for UltraSearch (placeholder)"

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
ipc = { path = "../ipc" }
core-types = { path = "../core-types" }
gpui = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["rt", "sync", "time"] }
futures = "0.3"
uuid = { workspace = true }
tray-icon = "0.19"
muda = "0.15"
image = "0.25"
global-hotkey = "0.6"
md5 = "0.7"
sysinfo = { workspace = true }
toml = { workspace = true }
once_cell = { workspace = true }
chrono = { version = "0.4", default-features = true, features = ["clock"] }
pulldown-cmark = "0.10"

[build-dependencies]
winres = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
    "Win32_UI_Controls",
    "Win32_Storage_FileSystem",
] }

[package.metadata.wix]
upgrade-guid = "F5B2C1A2-5BC0-4C5D-93E4-0D6F9A6C9E11"
path-to-wxs = "wix/main.wxs"
description = "UltraSearch desktop client"
license = "MIT OR Apache-2.0"
manufacturer = "Ultrasearch Team"
homepage = "https://github.com/Dicklesworthstone/ultrasearch"
